Bootstrap for maps page

--- a/map/index.html
+++ b/map/index.html
@@ -1,1 +1,17 @@
-Hello map!
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <title>Cahya &amp; Andhika</title>
+
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ" crossorigin="anonymous">
+  </head>
+  <body>
+    <h1>Cahya &amp; Andhika</h1>
+    <p><a href="https://www.google.com/maps/search/?api=1&amp;query=Damai%20Indah%20Golf%20Course%20&amp;%20Country%20Club%20BSD&amp;query_place_id=ChIJddogRhP7aS4RN1V3dd5FFqw" class="btn btn-primary">Google Maps</button>
+    <p><a href="waze://?q=Damai%20Indah%20Golf%20BSD%20Course,ll=-6.2815487,106.6499378&amp;navigate=yes" class="btn btn-primary">Waze</button>
+  </body>
+</html>
