--- a/map/index.html
+++ b/map/index.html
@@ -10,8 +10,10 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ" crossorigin="anonymous">
   </head>
   <body>
-    <h1>Cahya &amp; Andhika</h1>
-    <p><a href="https://www.google.com/maps/search/?api=1&amp;query=Damai%20Indah%20Golf%20Course%20&amp;%20Country%20Club%20BSD&amp;query_place_id=ChIJddogRhP7aS4RN1V3dd5FFqw" class="btn btn-primary">Google Maps</button>
-    <p><a href="waze://?q=Damai%20Indah%20Golf%20BSD%20Course,ll=-6.2815487,106.6499378&amp;navigate=yes" class="btn btn-primary">Waze</button>
+    <div class="container">
+      <h2 style="text-align: center">Cahya &amp; Andhika</h2>
+      <p><a href="https://www.google.com/maps/search/?api=1&amp;query=Damai%20Indah%20Golf%20Course%20&amp;%20Country%20Club%20BSD&amp;query_place_id=ChIJddogRhP7aS4RN1V3dd5FFqw" class="btn btn-block btn-primary">Google Maps</button>
+      <p><a href="waze://?q=Damai%20Indah%20Golf%20BSD%20Course,ll=-6.2815487,106.6499378&amp;navigate=yes" class="btn btn-block btn-primary">Waze</button>
+    </div>
   </body>
 </html>
