--- a/map/index.html
+++ b/map/index.html
@@ -11,9 +11,10 @@
   </head>
   <body>
     <div class="container">
-      <h2 style="text-align: center">Cahya &amp; Andhika</h2>
-      <p><a href="https://www.google.com/maps/search/?api=1&amp;query=Damai%20Indah%20Golf%20Course%20&amp;%20Country%20Club%20BSD&amp;query_place_id=ChIJddogRhP7aS4RN1V3dd5FFqw" class="btn btn-block btn-primary">Google Maps</button>
-      <p><a href="waze://?q=Damai%20Indah%20Golf%20BSD%20Course,ll=-6.2815487,106.6499378&amp;navigate=yes" class="btn btn-block btn-primary">Waze</button>
+      <h2 style="text-align: center; padding: 1em 0.5em">Cahya &amp; Andhika</h2>
+      <p><a href="https://www.google.com/maps/search/?api=1&amp;query=Damai%20Indah%20Golf%20Course%20&amp;%20Country%20Club%20BSD&amp;query_place_id=ChIJddogRhP7aS4RN1V3dd5FFqw" class="btn btn-block btn-primary">Google Maps</a></p>
+      <p><a href="waze://?q=Damai%20Indah%20Golf%20BSD%20Course,ll=-6.2815487,106.6499378&amp;navigate=yes" class="btn btn-block btn-primary">Waze</a></p>
+      <p><a href="uber://?client_id=lHV-AP1LG9BIlTo8RSuQDXA4s2nvgQzc&amp;action=setPickup&amp;pickup=my_location&amp;dropoff[latitude]=-6.281549&amp;dropoff[longitude]=106.652127&amp;dropoff[nickname]=Damai%20Indah%20Golf%20and%20Country%20Club%20%28BSD%29%20%5Bshowtheway.io%5D&amp;dropoff[formatted_address]=Jl.%20Bukit%20Golf%20I%20Blok%20P%20No.17%2C%20Lengkong%20Karya%2C%20Serpong%20Utara%2C%20Kota%20Tangerang%20Selatan%2C%20Banten%2015310%2C%20Indonesia" class="btn btn-block btn-primary">Uber</a></p>
     </div>
   </body>
 </html>
